--- a/code/model_evaluator/requirements.txt
+++ b/code/model_evaluator/requirements.txt
@@ -17,7 +17,9 @@ click==8.1.8
 click-option-group==0.5.7
 colorama==0.4.6
 coloredlogs==15.0.1
+contourpy==1.3.2
 cryptography==44.0.2
+cycler==0.12.1
 dataproperty==1.1.0
 datasets==3.5.0
 defusedxml==0.7.1
@@ -29,6 +31,7 @@ face==24.0.0
 filelock==3.18.0
 flash-attn==2.7.4.post1
 flatbuffers==25.2.10
+fonttools==4.57.0
 frozenlist==1.6.0
 fsspec==2024.12.0
 glom==22.1.0
@@ -44,10 +47,12 @@ joblib==1.4.2
 jsonlines==4.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+kiwisolver==1.4.8
 -e file:///workspace/code/lm-evaluation-harness
 markdown==3.8
 markdown-it-py==3.0.0
 markupsafe==3.0.2
+matplotlib==3.10.1
 mbstrdecoder==1.1.4
 mdurl==0.1.2
 more-itertools==10.6.0
@@ -73,7 +78,7 @@ nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 onnx==1.17.0
-onnxruntime==1.21.1
+onnxruntime-gpu==1.21.1
 openai==1.3.6
 optimum==1.24.0
 packaging==25.0
@@ -95,6 +100,7 @@ pydantic-core==2.23.4
 pygments==2.19.1
 pynacl==1.5.0
 pynvml==12.0.0
+pyparsing==3.2.3
 pytablewriter==1.2.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
@@ -111,6 +117,7 @@ sacrebleu==2.0.0
 safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.2
+seaborn==0.13.2
 semgrep==1.51.0
 sentencepiece==0.2.0
 setuptools==79.0.0
